[A11y]Fixing a missed horizontal scroll bar case (#8353)
* Adding some style workarounds for narrow screen
* Update similar snippet for 2FA dialog
* Remove display flex from login account row

--- a/src/Bootstrap/less/theme/page-account-settings.less
+++ b/src/Bootstrap/less/theme/page-account-settings.less
@@ -40,7 +40,6 @@
 
   .login-account-row {
     padding-top: 10px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
   }
